feat: criado CRUD de usuários e atualizado documentação do swagger
