# src/swagger.yaml
@@ -283,6 +283,108 @@ paths:
         '500':
           description: Erro interno do servidor.
 
+  /usuarios:
+    get:
+      summary: Retorna uma lista de usuários.
+      tags:
+        - Usuários
+      responses:
+        '200':
+          description: Lista de usuários retornada com sucesso.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '500':
+          description: Erro interno do servidor.
+    post:
+      summary: Cria um novo usuário.
+      tags:
+        - Usuários
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserInput'
+      responses:
+        '201':
+          description: Usuário criado com sucesso.
+        '400':
+          description: Um ou mais dados fornecidos estão incorretos.
+        '500':
+          description: Erro interno do servidor.
+
+  /usuarios/{id}:
+    get:
+      summary: Retorna um usuário específico.
+      tags:
+        - Usuários
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do usuário.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Detalhes do usuário retornado com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Um ou mais dados fornecidos estão incorretos.
+        '404':
+          description: Usuário não encontrado.
+        '500':
+          description: Erro interno do servidor.
+    put:
+      summary: Atualiza um usuário específico.
+      tags:
+        - Usuários
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do usuário.
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserInput'
+      responses:
+        '200':
+          description: Usuário atualizado com sucesso.
+        '400':
+          description: Um ou mais dados fornecidos estão incorretos.
+        '500':
+          description: Erro interno do servidor.
+    delete:
+      summary: Deleta um usuário específico.
+      tags:
+        - Usuários
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do usuário.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Usuário deletado com sucesso.
+        '400':
+          description: Um ou mais dados fornecidos estão incorretos.
+        '500':
+          description: Erro interno do servidor.
+
 components:
   schemas:
     BookSummary: 
@@ -354,4 +456,31 @@ components:
       required:
        - nome
        - nacionalidade
-  
+       
+    User:
+      type: object
+      properties:
+        _id:
+          type: string
+        nome:
+          type: string
+        email:
+          type: string
+        senha:
+          type: string
+          description: A senha é armazenada de forma segura.
+    
+    UserInput:
+      type: object
+      properties:
+        nome:
+          type: string
+        email:
+          type: string
+        senha:
+          type: string
+          description: A senha deve ser forte e terá armazenamento seguro.
+      required:
+       - nome
+       - email
+       - senha
